# anime365-qtquick

./: .gitignore  README.md  build.py  flake.nix  pyproject.toml  requirements.txt  shell.nix  start.sh
.github/workflows/: build.yml
src/: backend.py  constants.py  main.py  main.qml
src/backend/: __init__.py  anime.py  database.py  discord_rpc.py  downloader.py  fonts.py  image_cache.py  net.py  search.py  settings.py  shikimori.py  updater.py  utils.py
src/qml/: Globals.qml  main.qml
src/qml/components/: AnimeScreen.qml  AsyncImage.qml  CustomBusyIndicator.qml  CustomButton.qml  CustomDropdown.qml  CustomGridView.qml  CustomListView.qml  CustomSpinBox.qml  DownloadScreen.qml  Globals.qml  MainScreen.qml  SearchScreen.qml  SettingsScreen.qml  StyledButton.qml  StyledTextField.qml  Toast.qml  ValidatedPathField.qml
src/qml/theme/: Themes.qml
src/style/: Main.qml  Top.ui.qml
