[project]
name = "anime365-qtquick"
version = "0.3.3"
description = "Qt Quick client for Anime365"
requires-python = ">=3.12"
dependencies = [
    "pyside6",
    "aiohttp",
    "certifi",
    "aiohttp-socks",
    "ass",
]

[dependency-groups]
build = ["pyinstaller", "pillow"]
android = ["jinja2", "pkginfo", "tqdm", "packaging==24.1"]
